# PPToken

./: .gitignore  LICENSE  NOTICE  README-en.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-desktop.yml
docs/: OPEN_SOURCE.md
scripts/: create-updater-manifest.mjs  merge-updater-manifests.mjs
src/: index.css  main-app.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin_content.rs  analytics.rs  hotspot.rs  local_state.rs  mod.rs  pilot.rs  system.rs  tray_menu.rs
src-tauri/src/core/: admin_content.rs  analytics.rs  api_client.rs  auth.rs  bootstrap_cache.rs  custom_instructions.rs  mcp.rs  mod.rs  models.rs  pilot.rs  quota_store.rs  repository.rs  skills.rs
src-tauri/src/platform/: accessibility.rs  audio_feedback.rs  daemon.rs  macos_main_bundle.rs  paths.rs  process.rs  single_instance.rs  system_volume.rs  text_injection.rs  update.rs  windows.rs
src/components/: site-header.tsx
src/components/admin/: admin-page.tsx
src/components/custom-instructions/: custom-instructions-page.tsx
src/components/layout/: page-stage.tsx  sidebar.tsx
src/components/mcp/: mcp-page.tsx
src/components/overview/: overview-page.tsx
src/components/pilot/: accounts-page.tsx  pilot-ui.tsx  relay-page.tsx  sessions-page.tsx
src/components/plugins/: plugins-page.tsx
src/components/settings/: settings-page.tsx
src/components/skills/: skills-page.tsx
src/components/ui/: bento-card.tsx  button.tsx  input.tsx  page-header.tsx  select.tsx  sidebar.tsx  textarea.tsx
src/hooks/: use-accent-color.ts  use-notifications.ts  use-update-check.ts
src/lib/: api.ts  format-time.ts
src/locales/: en.json  zh.json
src/types/: index.ts  navigation.ts
