[package]
name = "pptoken"
version = "1.0.7"
default-run = "PPToken"
description = "Independent Codex control panel with accounts, sessions, routing, MCP, skills, and custom instructions"
authors = ["PPToken Contributors"]
license = "Apache-2.0"
repository = "https://github.com/xiaokelongxia/PPToken"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pptoken_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "PPToken"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "socks"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread", "NSGeometry", "NSValue", "NSArray", "NSString", "NSNotification", "NSOperation", "NSBundle"] }
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSWindow", "NSRunningApplication", "NSApplication", "NSWorkspace", "NSEvent", "NSColor"] }
